samples/_failures_safe/1761073527_565f4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_707d5357.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_707d5357.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->points = NULL;
      |     ^~
